--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -33,14 +33,14 @@
   bottom: 8%;
 }
 
-.piece-selected-buttons {
+.piece-buttons {
   width: 100%;
   height: 100%;
   position: relative;
   z-index: 10;
 }
 
-.piece-selected-button {
+.piece-button {
   position: absolute;
   padding: 0;
   width: 50px;
@@ -48,12 +48,25 @@
   border-radius: 25px;
 }
 
+.piece-button-img-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.piece-button-img-container > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .cancel-selection {
   left: 50%;
   transform: translateX(-50%);
   top: -45px;
 }
-.cancel-selection > img {
+.cancel-selection-image {
   width: 65%;
 }
 
@@ -61,7 +74,7 @@
   left: -40px;
   top: 5px;
 }
-.confirm-move > img {
+.confirm-move-image {
   width: 65%;
 }
 
@@ -69,7 +82,7 @@
   right: -40px;
   top: 5px;
 }
-.confirm-attack > img {
+.confirm-attack-image {
   width: 50%;
 }
 
@@ -77,7 +90,7 @@
   left: -20px;
   bottom: -30px;
 }
-.rotate-cw > img {
+.rotate-cw-image {
   width: 60%;
 }
 
@@ -85,7 +98,7 @@
   right: -20px;
   bottom: -30px;
 }
-.rotate-ccw > img {
+.rotate-ccw-image {
   width: 60%;
   transform: scaleX(-1);
 }
