--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -4,6 +4,12 @@
       'player1' : piece.player.id == 'player1',
       'player2' : piece.player.id == 'player2'
       }">
+  <div class="piece-outline" [style.transform]="getPieceRotationTransform()">
+    <div class="piece-top">T</div>
+    <div class="piece-left">L</div>
+    <div class="piece-right">R</div>
+    <div class="piece-bottom">B</div>
+  </div>
   <div class="piece-name">{{piece.name}}</div>
   <div class="piece-health">❤ {{piece.getHealth()}}</div>
   <div *ngIf="piece.selected" class="piece-buttons">
