Cancel staging if non-move click is made.

--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -49,7 +49,7 @@
         {{getSelected()!.terrain.type}}
       </div>
       <div class="selected-terrain-image-container">
-        <img class="selected-terrain-image" src="/images/{{getSelected()!.terrain.type}}.png">
+        <img class="selected-terrain-image" src="/images/terrain/{{getSelected()!.terrain.type}}.png">
       </div>
       <div class="additional-details">
         This terrain gives {{getSelected()!.terrain.elevation}} to power.
