Piece look and feel overhaul

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,6 +5,6 @@
 
   --header_height: 100px;
 
-  --player_1_color: cornflowerblue;
-  --player_2_color: coral;
+  --player_1_color: lightblue;
+  --player_2_color: bisque;
 }
