Rotate piece around an offset center.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,6 +5,13 @@
 
   --header_height: 100px;
 
-  --player_1_color: lightblue;
+  //--player_1_color: cadetblue;
+  //--player_1_color: darkseagreen;
+  //--player_1_color: khaki;
+  //--player_1_color: lightblue;
+  --player_1_color: lightcyan;
+  //--player_1_color: lightyellow;
+  //--player_1_color: lightgoldenrodyellow;
+
   --player_2_color: bisque;
 }
