--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -14,8 +14,16 @@
       <div class="piece-top-triangle-background"></div>
     </div>
   </div>
+
   <div class="piece-name">{{piece.name}}</div>
-  <div class="piece-health">❤ {{piece.getHealth()}}</div>
+
+  <div class="piece-health">
+    <div class="piece-health-background"></div>
+    <img src="/images/icon/black_heart.png">
+    <div class="piece-health-number">
+      {{piece.getHealth()}}
+    </div>
+  </div>
 
   <!-- These are the buttons that show up once the piece is selected. -->
   <div *ngIf="piece.selected" class="piece-buttons">
