--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -1,13 +1,15 @@
 .piece {
   width: 100%;
   height: 100%;
-  border-radius: 54px;
   position: relative;
   font-size: 20px;
   cursor: pointer;
   color: black;
 }
 
+// =============================================
+// Piece Outline
+// =============================================
 .piece-outline {
   width: 100%;
   height: 100%;
@@ -79,7 +81,7 @@
 }
 
 .piece-left {
-  border-left-color:black;
+  border-left-color: black;
 }
 
 .piece-right {
@@ -90,6 +92,9 @@
   border-bottom-color: #E43022;
 }
 
+// =============================================
+// Piece Name
+// =============================================
 .piece-name {
   position: absolute;
   left: 0;
@@ -97,13 +102,56 @@
   top: 38%;
 }
 
+// =============================================
+// Piece Health
+// =============================================
 .piece-health {
   position: absolute;
-  left: 0;
   right: 0;
-  bottom: 8%;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
 }
 
+.piece-health-background {
+  width: 0;
+  height: 0;
+  border-left: 35px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 35px solid transparent; // color placeholder
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  // Hide this triangle for now.
+  display: none;
+}
+
+.player1 .piece-health-background {
+  border-bottom-color: var(--player_1_color);
+}
+
+.player2 .piece-health-background {
+  border-bottom-color: var(--player_2_color);
+}
+
+.piece-health>img {
+  position: absolute;
+  width: 25px;
+  right: 3px;
+  bottom: 3px;
+}
+
+.piece-health-number {
+  position: absolute;
+  bottom: 4px;
+  right: 12px;
+  font-size: 16px;
+  color: white;
+}
+
+// =============================================
+// Piece Buttons
+// =============================================
 .piece-buttons {
   width: 100%;
   height: 100%;
