Font and style overhaul.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
   <div class="title">Strike</div>
 </div>
 
+<div class="app-background">
+  <img src="/images/body_background.webp">
+</div>
+
 <div class="left-panel">
   <app-selected></app-selected>
   <audio class="audio-controls" controls loop>
