--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -5,7 +5,7 @@
     <div class="selected-piece-name">
       Nothing selected
     </div>
-    <img class="nothing-selected-image" src="/images/nothing_selected.jpg">
+    <img class="nothing-selected-image" src="/images/strike_pieces.webp">
   </div>
 
   <div *ngIf="getSelected()" class="selected-content">
