--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,8 @@
 }
 
 body {
-  font-family: ExcelsiorSans;
+  //font-family: ExcelsiorSans;
+  font-family: 'Roboto Slab', serif;
   text-align: center;
   margin: 0;
   background-color: var(--background_color);
@@ -24,15 +25,16 @@ body {
 }
 
 button {
-  font-family: ExcelsiorSans;
+  //font-family: ExcelsiorSans;
+  font-family: 'Roboto Slab', serif;
   background: var(--foreground_color); // Intentional flip
   color: var(--background_color);
-  border: 2px solid var(--background_color);
-  font-size: 25px;
+  border: 2px solid black;
+  font-size: 20px;
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  padding: 6px 10px 2px 10px;
+  border-radius: 10px;
 }
 button:hover {
   background: #ddd;
