--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -32,7 +32,7 @@
           AR: {{getSelected()!.getPiece()!.attackRange}}
         </div>
         <div class="selected-piece-stat">
-          MV: {{getSelected()!.getPiece()!.movement}}
+          MV: {{getSelected()!.getPiece()!.moveRange}}
         </div>
         <div class="selected-piece-stat">
           HP: {{getSelected()!.getPiece()!.maxHealth}}
