Added details to terrain and defined buff colors

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,4 +14,14 @@
   //--player_1_color: lightgoldenrodyellow;
 
   --player_2_color: bisque;
+
+  --buffed_color: springgreen;
+  //--buffed_color: mediumspringgreen;
+  //--buffed_color: lime;
+  //--buffed_color: limegreen;
+
+  --debuffed_color: orangered;
+  //--debuffed_color: tomato;
+  //--debuffed_color: deeppink;
+  //--debuffed_color: red;
 }
