--- a/src/app/selected/selected.component.scss
+++ b/src/app/selected/selected.component.scss
@@ -76,8 +76,16 @@
 }
 
 .additional-details {
+  text-transform: none;
   font-size: 15px;
-  font-weight: 100;
-  padding: 10px;
-  height: 20px;
+  padding: 15px;
+  text-align: left;
+}
+
+.stat-buffed {
+  color: var(--buffed_color);
+}
+
+.stat-debuffed {
+  color: var(--debuffed_color);
 }
