--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -136,17 +136,66 @@
 
 .piece-health>img {
   position: absolute;
-  width: 25px;
-  right: 3px;
-  bottom: 3px;
+  width: 27px;
+  right: 2px;
+  bottom: 2px;
 }
 
 .piece-health-number {
   position: absolute;
   bottom: 6px;
-  right: 12px;
+  right: 8px;
   font-size: 14px;
   color: white;
+  transform: translateX(-50%);
+}
+
+// =============================================
+// Piece Defense
+// =============================================
+.piece-defense {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+}
+
+.piece-defense-background {
+  width: 0;
+  height: 0;
+  border-left: 35px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 35px solid transparent; // color placeholder
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  // Hide this triangle for now.
+  display: none;
+}
+
+.player1 .piece-defense-background {
+  border-bottom-color: var(--player_1_color);
+}
+
+.player2 .piece-defense-background {
+  border-bottom-color: var(--player_2_color);
+}
+
+.piece-defense>img {
+  position: absolute;
+  width: 26px;
+  left: 3px;
+  bottom: 3px;
+}
+
+.piece-defense-number {
+  position: absolute;
+  bottom: 6px;
+  left: 16px;
+  font-size: 14px;
+  color: white;
+  transform: translateX(-50%);
 }
 
 // =============================================
