Introduce piece side strenths and tie to render.

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,11 +5,11 @@
 
   --header_height: 100px;
 
+  --player_1_color: lightcyan;
   //--player_1_color: cadetblue;
   //--player_1_color: darkseagreen;
   //--player_1_color: khaki;
   //--player_1_color: lightblue;
-  --player_1_color: lightcyan;
   //--player_1_color: lightyellow;
   //--player_1_color: lightgoldenrodyellow;
 
@@ -24,4 +24,9 @@
   //--debuffed_color: tomato;
   //--debuffed_color: deeppink;
   //--debuffed_color: red;
+
+  --strong_color: #2CA3E8;
+  //--strength_color: #35A1C9;
+  --neutral_color: black;
+  --weak_color: #E43022;
 }
