Show attack and defense stats.

--- a/src/app/cell/cell.component.html
+++ b/src/app/cell/cell.component.html
@@ -17,6 +17,6 @@
       class="cell-available-attack"
       [ngClass]="{'empty-attack-cell' : !cell.hasPiece()}">
     <!-- alternative: ⚔, ⤲ -->
-    <img src="/images/icon/attack_icon.png">
+    <img src="/images/icon/attack_icon_2.webp">
   </div>
 </div>
