--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -17,8 +17,20 @@
 
   <div class="piece-name">{{piece.name}}</div>
 
-  <div class="piece-defense">
-    <div class="piece-defense-background"></div>
+  <!-- Show attack if active. -->
+  <div *ngIf="piece.player.isActive()" class="piece-attack">
+    <div class="piece-attack-background"></div>
+    <img src="/images/icon/attack_icon_2.webp">
+    <div class="piece-attack-number"
+      [ngClass]="{
+        'stat-buffed': getAttack() > 0,
+        'stat-debuffed': getAttack() < 0}">
+      {{getAttack()}}
+    </div>
+  </div>
+
+  <!-- Show defense if not active. -->
+  <div *ngIf="!piece.player.isActive()" class="piece-defense">
     <img src="/images/icon/shield_icon.png">
     <div class="piece-defense-number"
       [ngClass]="{
@@ -29,7 +41,6 @@
   </div>
 
   <div class="piece-health">
-    <div class="piece-health-background"></div>
     <img src="/images/icon/black_heart.png">
     <div class="piece-health-number">
       {{piece.getHealth()}}
