--- a/src/app/piece/piece.component.scss
+++ b/src/app/piece/piece.component.scss
@@ -50,6 +50,7 @@
 .strength-strong .piece-top-triangle-outline {
   border-bottom-color: var(--strong_color);
 }
+
 .strength-weak .piece-top-triangle-outline {
   border-bottom-color: var(--weak_color);
 }
@@ -90,9 +91,11 @@
 .strength-strong.piece-left {
   border-left-color: var(--strong_color);
 }
+
 .strength-weak.piece-left {
   border-left-color: var(--weak_color);
 }
+
 .strength-neutral.piece-left {
   border-left-color: var(--neutral_color);
 }
@@ -100,9 +103,11 @@
 .strength-strong.piece-right {
   border-right-color: var(--strong_color);
 }
+
 .strength-weak.piece-right {
   border-right-color: var(--weak_color);
 }
+
 .strength-neutral.piece-right {
   border-right-color: var(--neutral_color);
 }
@@ -110,9 +115,11 @@
 .strength-strong.piece-bottom {
   border-bottom-color: var(--strong_color);
 }
+
 .strength-weak.piece-bottom {
   border-bottom-color: var(--weak_color);
 }
+
 .strength-neutral.piece-bottom {
   border-bottom-color: var(--neutral_color);
 }
@@ -139,27 +146,6 @@
   height: 50px;
 }
 
-.piece-health-background {
-  width: 0;
-  height: 0;
-  border-left: 35px solid transparent;
-  border-right: 0px solid transparent;
-  border-bottom: 35px solid transparent; // color placeholder
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  // Hide this triangle for now.
-  display: none;
-}
-
-.player1 .piece-health-background {
-  border-bottom-color: var(--player_1_color);
-}
-
-.player2 .piece-health-background {
-  border-bottom-color: var(--player_2_color);
-}
-
 .piece-health>img {
   position: absolute;
   width: 27px;
@@ -177,6 +163,43 @@
 }
 
 // =============================================
+// Piece Attack
+// =============================================
+.piece-attack {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 50px;
+  height: 50px;
+}
+
+.piece-attack-background {
+  bottom: 5px;
+  position: absolute;
+  left: 6px;
+  width: 20px;
+  height: 20px;
+  background: black;
+  border-radius: 40px;
+}
+
+.piece-attack>img {
+  position: absolute;
+  width: 26px;
+  left: 3px;
+  bottom: 3px;
+}
+
+.piece-attack-number {
+  position: absolute;
+  bottom: 6px;
+  left: 16px;
+  font-size: 14px;
+  color: white;
+  transform: translateX(-50%);
+}
+
+// =============================================
 // Piece Defense
 // =============================================
 .piece-defense {
@@ -185,27 +208,6 @@
   bottom: 0;
   width: 50px;
   height: 50px;
-}
-
-.piece-defense-background {
-  width: 0;
-  height: 0;
-  border-left: 35px solid transparent;
-  border-right: 0px solid transparent;
-  border-bottom: 35px solid transparent; // color placeholder
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  // Hide this triangle for now.
-  display: none;
-}
-
-.player1 .piece-defense-background {
-  border-bottom-color: var(--player_1_color);
-}
-
-.player2 .piece-defense-background {
-  border-bottom-color: var(--player_2_color);
 }
 
 .piece-defense>img {
