Switch confirm attack icon.

--- a/src/app/piece/piece.component.html
+++ b/src/app/piece/piece.component.html
@@ -63,7 +63,7 @@
     <button class="piece-button confirm-attack" (click)="confirmAttack($event)"
         [disabled]="piece.attacked">
       <div class="piece-button-img-container">
-        <img class="confirm-attack-image" src="/images/icon/attack_icon.png">
+        <img class="confirm-attack-image" src="/images/icon/attack_icon_2.webp">
       </div>
     </button>
     <button class="piece-button rotate-cw" (click)="rotateClockwise($event)"
