Introduce the concept of a machine ability.

--- a/src/app/selected/selected.component.html
+++ b/src/app/selected/selected.component.html
@@ -41,7 +41,10 @@
           HP: {{getPiece().maxHealth}}
         </div>
       </div>
-      <div class="additional-details">
+      <div *ngIf="getPiece().hasAbility()" class="additional-details">
+        <b>Ability: </b>{{getPiece().getAbilityDescription()}}
+      </div>
+      <div *ngIf="!getPiece().hasAbility()" class="additional-details">
         No skills for this machine.
       </div>
     </div>
